--- a/package.json
+++ b/package.json
@@ -1,43 +1,55 @@
 {
-  "name": "itlike_manager",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "antd": "^4.6.3",
-    "axios": "^0.20.0",
-    "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^1.0.0",
-    "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
-  },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "itlike_manager",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"antd": "^4.6.3",
+		"axios": "^0.20.0",
+		"babel-plugin-import": "^1.13.0",
+		"blueimp-md5": "^2.18.0",
+		"braft-editor": "^2.3.9",
+		"braft-utils": "latest",
+		"customize-cra": "^1.0.0",
+		"echarts": "^4.9.0",
+		"echarts-for-react": "^2.0.16",
+		"http-proxy-middleware": "^1.0.5",
+		"moment": "^2.27.0",
+		"prop-types": "^15.7.2",
+		"pubsub-js": "^1.9.0",
+		"rc-tween-one": "^2.7.3",
+		"react": "^16.13.1",
+		"react-app-rewired": "^2.1.6",
+		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.3",
+		"redux": "^4.0.5",
+		"redux-saga": "^1.1.3",
+		"store": "^2.0.12",
+		"@ant-design/icons": "latest"
+	},
+	"scripts": {
+		"start": "react-app-rewired start",
+		"build": "react-app-rewired build",
+		"test": "react-app-rewired test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
